--- a/bankofstates/package.json
+++ b/bankofstates/package.json
@@ -5,18 +5,18 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.4.0",
-    "@material-ui/core": "4.11.2",
-    "@material-ui/icons": "^4.11.2",
-    "bootstrap": "^4.5.3",
+    "@testing-library/user-event": "^12.4.0",   
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
+    "web-vitals": "^0.2.4",
+    "@material-ui/core": "4.11.2",
+    "@material-ui/icons": "^4.11.2",    
+    "react-router-dom": "5.2.0",    
     "react-toastify": "^6.2.0",
     "reactstrap": "^8.7.1",
     "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4"
+    "bootstrap": "^4.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
