--- a/bankofstates/package.json
+++ b/bankofstates/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.4.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "formik": "^2.2.6",
     "formik-material-ui": "^3.0.1",
@@ -27,6 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:8080",
   "eslintConfig": {
     "extends": [
       "react-app",
